Basic navigation view for projects

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,11 +16,17 @@
 <body>
   <% if !@status %>
     <div id="navigation">
-      bleep bloop
+      <h1 id="title">Molly<br> FitzHarris</h1>
+      <div id="links">
+        <a href="/about">ABOUT</a> |
+        <a href="/projects">PROJECTS</a> 
+        <a class="icon" title="github" href="https://github.com/mfitzharris"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+        <a class="icon" title="linkedin" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+        <a class="icon" title="twitter" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+        <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+      </div>
     </div>
   <% end %>
-  <div id="main">
-    <%= yield %>
-  </div>
+  <%= yield %>
 </body>
 </html>
