Update padding on header to be consistent on collapse

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,10 +73,12 @@ i.fa:hover {
 div#navigation {
   font-family: 'Josefin Sans', sans-serif;
   color: white;
+  margin: 10px;
 }
 
 div#navigation h1 {
   letter-spacing: .15em;
+  margin: 0px;
 }
 
 div#navigation > * {
