Further tweak padding on header

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,7 +73,7 @@ i.fa:hover {
 div#navigation {
   font-family: 'Josefin Sans', sans-serif;
   color: white;
-  margin: 10px;
+  margin: 20px 10px 10px 20px;
 }
 
 div#navigation h1 {
