Switch email icon

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
         <a class="icon" title="github" href="https://github.com/mfitzharris"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
         <a class="icon" title="linkedin" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
         <a class="icon" title="twitter" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-        <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+        <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
       </div>
     </div>
   <% end %>
