--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -2,7 +2,7 @@
   <h2 id="page-title">PROJECTS</h2>
   <ul id="projects">
     <% @projects.each do |project| %>
-      <li><a href="projects/<%= project.id %>"><span class="proj-title"><%= project.name%></span><br><%= project.date %></a></a></li>
+      <li><a class="proj-link int-link" href="projects/<%= project.id %>"><span class="proj-title"><%= project.name%></span><br><%= project.date %></a></a></li>
     <% end %>
   </ul>
 </div>
