--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -1,5 +1,5 @@
 <div id="main-content">
-  <h2 id="page-title"><a href="/projects">PROJECTS <i class="fa fa-angle-double-left" aria-hidden="true"></i></a></h2>
+  <h2 id="page-title"><a class="int-link" id="projects-link" href="/projects">PROJECTS <i class="fa fa-angle-double-left" aria-hidden="true"></i></a></h2>
 
   <div class="col-2">
     <h3 id="proj-title"><%= @project.name %></h3>
