--- a/app/views/splash.erb
+++ b/app/views/splash.erb
@@ -1,11 +1,13 @@
 <div id="floating">
-    <h1 id="title">Molly<br> FitzHarris</h1>
-    <h3 id="sub-title"><span id="line">developer</span></h3>
-    <div id="links">
-      <a class="icon" title="github" href="https://github.com/mfitzharris"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" title="linkedin" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" title="twitter" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-      <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
-    </div>
-    <a href="/projects"><button id="enter">PROJECTS</button></a>
+  <h1 id="title">Molly<br> FitzHarris</h1>
+  <h3 id="sub-title"><span id="line">developer</span></h3>
+
+  <div id="links">
+    <a class="icon" title="github" href="https://github.com/mfitzharris"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    <a class="icon" title="linkedin" href="https://www.linkedin.com/in/molly-fitzharris"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+    <a class="icon" title="twitter" href="https://twitter.com/mollyifitz"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+    <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
   </div>
+
+  <a id="projects-link" class="int-link" href="/projects"><button id="enter">PROJECTS</button></a>
+</div>
