--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,7 @@ a.icon {
   padding: 5px;
 }
 
-i.fa:hover {
+i.splash-icon:hover {
   text-shadow: 0px 0px 10px black;
 }
 
@@ -203,5 +203,5 @@ img.proj-image {
 }
 
 .straight-borders {
-  border-radius: none;
+  border-radius: 0;
 }
