Add link to about page on splash/root page

--- a/app/views/splash.erb
+++ b/app/views/splash.erb
@@ -9,5 +9,5 @@
     <a class="icon" title="email" href="mailto:molly.fitzharris@gmail.com"><i class="splash-icon fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
   </div>
 
-  <a id="projects-link" class="int-link" href="/projects"><button id="enter">PROJECTS</button></a>
+  <a id="projects-link" class="int-link" href="/projects"><button id="enter">PROJECTS</button></a><a id="projects-link" class="int-link" href="/about"><button id="enter">ABOUT</button></a>
 </div>
