Add links to social media and email to about page (in addition to resume link), style link. Add section headers (contents currently empty) to about page.

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -1,16 +1,33 @@
 <div id="main-content">
   <h2 id="page-title">ABOUT</h2>
-  <a href="/pdf/Molly_FitzHarris_Resume.pdf">Résumé</a>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+  <a class="about-link" href="/pdf/Molly_FitzHarris_Resume.pdf">Résumé (link to pdf)</a> / 
+
+  <a class="about-link" href="maito:molly.fitzharris@gmail.com">Email: molly.fitzharris[at]gmail.com </a><br>
+
+  <a class="about-link" href="https://github.com/mfitzharris">Github @mfitzharris</a> / 
+
+  <a class="about-link" href="https://www.linkedin.com/in/molly-fitzharris">LinkedIn</a> / 
+
+  <a class="about-link" href="https://twitter.com/mollyifitz">Twitter @mollyifitz</a>
+  
+  <h3 class="about-header">My Background</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
+  <h3 class="about-header">My Passions</h3> 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
 </div>
