Add content to about page, add further styling edits to about page (and minor edits to site's navigation styling)

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -1,33 +1,27 @@
 <div id="main-content">
   <h2 id="page-title">ABOUT</h2>
-  <a class="about-link" href="/pdf/Molly_FitzHarris_Resume.pdf">Résumé (link to pdf)</a> / 
+  <div id="line-1">
+    <a class="about-link" href="/pdf/Molly_FitzHarris_Resume.pdf">Résumé (link to pdf)</a> / 
 
-  <a class="about-link" href="maito:molly.fitzharris@gmail.com">Email: molly.fitzharris[at]gmail.com </a><br>
+    <a class="about-link" href="maito:molly.fitzharris@gmail.com">Email: molly.fitzharris[at]gmail.com </a><br>
+  </div>
+  <div id="line-2"> 
+    <a class="about-link" href="https://github.com/mfitzharris">Github @mfitzharris</a> / 
 
-  <a class="about-link" href="https://github.com/mfitzharris">Github @mfitzharris</a> / 
+    <a class="about-link" href="https://www.linkedin.com/in/molly-fitzharris">LinkedIn</a> / 
 
-  <a class="about-link" href="https://www.linkedin.com/in/molly-fitzharris">LinkedIn</a> / 
-
-  <a class="about-link" href="https://twitter.com/mollyifitz">Twitter @mollyifitz</a>
+    <a class="about-link" href="https://twitter.com/mollyifitz">Twitter @mollyifitz</a>
+  </div>
   
   <h3 class="about-header">My Background</h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    The thing that I value most in life is learning and being constantly challenged. Most nights (any moment of free time really) find me running through coding tutorials to learn new languages/frameworks or techniques/approaches in ones I am not already familiar.
   </p>
-
-  <h3 class="about-header">My Passions</h3> 
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Even prior to the wonderful onslaught of learning that was DBC/my foray into the world of code, a quest constant learning was my default state. Before DBC, I spent most of my free time, after work, plugging away at 3D Sketchup models. Using a trial and error process, I endeavored to bring to life worlds that previously only existed in my head.
+  </p>
+  <p>
+    It is this same alchemical creating-life-from-nothing process that so quickly endeared me to coding. It is an extremely exciting feeling to witness the backend and frontend of an application coming together to create a singular output. 
   </p>
 
 </div>
