Begin adding content to Skills and Interests section of About page, update styling for col-2 class to fully fit parent

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -15,7 +15,7 @@
   
   <h3 class="about-header">My Background</h3>
   <p>
-    The thing that I value most in life is learning and being constantly challenged. Most nights (any moment of free time really) find me running through coding tutorials to learn new languages/frameworks or techniques/approaches in ones I am not already familiar.
+    The thing that I value most in life is learning and being constantly challenged. Most nights (any moment of free time really) find me running through coding tutorials to learn new languages/frameworks or techniques/approaches in ones with which I am already familiar.
   </p>
   <p>
     Even prior to the wonderful onslaught of learning that was DBC/my foray into the world of code, a quest constant learning was my default state. Before DBC, I spent most of my free time, after work, plugging away at 3D Sketchup models. Using a trial and error process, I endeavored to bring to life worlds that previously only existed in my head.
@@ -24,4 +24,66 @@
     It is this same alchemical creating-life-from-nothing process that so quickly endeared me to coding. It is an extremely exciting feeling to witness the backend and frontend of an application coming together to create a singular output. 
   </p>
 
+  <h3 class="about-header">My Skills & Interests </h3>
+  <div class="col-2">
+    <p class="mini-header">PROGRAMMING:</p>
+    <p>
+      <span class="pas-bold">Ruby:</span> Ruby is the language which I am most proficient in. (somehow word in Rails and Sinatra into this???)
+    </p>
+    <p>
+      <span class="pas-bold">HTML & CSS</span>
+    </p>
+    <p>
+      <span class="pas-bold">JavaScript:</span> and many of its frameworks including jQuery/Ajax and Angular
+    </p>
+    <p>
+      <span class="pas-bold">Databases:</span> Confident using SQL (posgreSQL, SQLite, mySQL, ActiveRecord for Ruby and SQLAlchemy for Python) I've been a fan of databases since my stint as an intern at the Art Institute of Chicago's archives in 2012 where I prepped items for entry as well as utilized the AIC's databases for research purposes.
+    </p> 
+    <p>
+      <span class="pas-bold">Python:</span> Learned during my capstone project at DBC (<a href="/projects/1">CuriousCorpus</a>) I am familiar with its SciKit-Learn and NLP libraries as well as the Flask Framework and the ORM SQLAlchemy.
+    </p>
+    <p>
+      <span class="pas-bold">Object Oriented Design</span>
+    </p> 
+    <p>
+      <span class="pas-bold">Test Driven Development</span>
+    </p>
+
+    <p class="mini-header">SOFTWARE:</p>
+    <p>
+      <span class="pas-bold">Photoshop:</span> Particularly for graphic creation and in the use of drawing/painting.
+    </p>
+    <p>
+      <span class="pas-bold">Sketchup:</span> Versions 8, 2016, and 2017. 
+    </p>
+    <p>
+      <span class="pas-bold">Adobe Acrobat:</span> Particularly for running word recognition on scanned-in ephemera for the creation of searchable text.
+    </p>
+    <p>
+      <span class="pas-bold">MailChimp</span>
+    </p>
+    <p>
+      <span class="pas-bold">QuickBooks</span>
+    </p>
+    <p>
+      <span class="pas-bold">Basecamp</span>
+    </p>
+
+  </div> 
+  <div class="col-2">
+    <p class="mini-header">INTERESTS:</p>
+
+    <p>
+      <span class="pas-bold">Accessibility:</span>
+    </p>
+    <p>
+      <span class="pas-bold">3D Modeling & World building</span>
+    </p>
+    <p>
+      <span class="pas-bold">Planning & Stationary</span>
+    </p>
+    <p>
+      <span class="pas-bold">Architecture & The Decorative Arts:</span>
+    </p>
+  </div> 
 </div>
