Edit wording in about page text

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -31,7 +31,7 @@
       <span class="pas-bold">Ruby:</span> Ruby is the language which I am most proficient in. (somehow word in Rails and Sinatra into this???)
     </p>
     <p>
-      <span class="pas-bold">HTML & CSS</span>
+      <span class="pas-bold">HTML5 & CSS3</span>
     </p>
     <p>
       <span class="pas-bold">JavaScript:</span> and many of its frameworks including jQuery/Ajax and Angular
