Add ability to tab through images without closing out of lightbox/modal

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -237,3 +237,8 @@ p.mini-header {
   border-bottom: solid black 1px;
   letter-spacing: .1em;
 }
+
+div.featherlight-content {
+  width: 50%;
+  margin: auto;
+}
