--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,7 +125,7 @@ ul#projects li {
   padding: 30px;
   margin-bottom: 2%;
   text-align: center;
-  border: solid black 3px;
+  border: solid black 2px;
   letter-spacing: .15em;
 }
 
@@ -154,7 +154,7 @@ ul#projects li:hover {
 
 span.proj-title {
   font-weight: 600;
-  font-size: 1.25em;
+  font-size: 1.5em;
 }
 
 .col-2 {
@@ -247,8 +247,7 @@ p.mini-header {
 }
 
 div.featherlight-content {
-  width: 50%;
-  margin: auto;
+  max-width: 75%;
 }
 
 input.search-box {
