Add credits to bottom of about page

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -13,7 +13,7 @@
     <a class="about-link" href="https://twitter.com/mollyifitz">Twitter @mollyifitz</a>
   </div>
   
-  <h3 class="about-header">My Background</h3>
+  <h3 class="about-header">my background</h3>
   <p>
     The thing that I value most in life is learning and being constantly challenged. Most nights (any moment of free time really) find me running through coding tutorials to learn new languages/frameworks or techniques/approaches in ones with which I am already familiar.
   </p>
@@ -24,7 +24,7 @@
     It is this same alchemical creating-life-from-nothing process that so quickly endeared me to coding. It is an extremely exciting feeling to witness the backend and frontend of an application coming together to create a singular output. 
   </p>
 
-  <h3 class="about-header">My Skills & Interests </h3>
+  <h3 class="about-header">my skills & interests </h3>
   <div class="col-2">
     <p class="mini-header">PROGRAMMING:</p>
     <p>
@@ -70,6 +70,7 @@
     </p>
 
   </div> 
+  
   <div class="col-2">
     <p class="mini-header">INTERESTS:</p>
 
@@ -86,4 +87,11 @@
       <span class="pas-bold">Architecture & The Decorative Arts:</span>
     </p>
   </div> 
+
+  <h3 class="about-header">credits:</h3>
+  <p>Background image is <a href="https://www.rijksmuseum.nl/en/collection/RP-P-1911-5620">"Storm"</a> by 19th century print maker Martinus Antonius Kuytenbrouwer jr. and dates to 1831-1897. It is in the <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">public domain.</a></p>
+  <p><a href="http://fontawesome.io/">Font Awesome</a> is used for icons.</p>
+  <p><a href="http://getbootstrap.com/">Bootstrap</a> is used as the base for the menus.</p>
+  <p><a href="http://noelboss.github.io/featherlight/">Featherlight.js</a> is used for the lightbox on project pages.</p>
+
 </div>
