--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -88,10 +88,8 @@
     </p>
   </div> 
 
-  <h3 class="about-header">credits:</h3>
-  <p>Background image is <a href="https://www.rijksmuseum.nl/en/collection/RP-P-1911-5620">"Storm"</a> by 19th century print maker Martinus Antonius Kuytenbrouwer jr. and dates to 1831-1897. It is in the <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">public domain.</a></p>
-  <p><a href="http://fontawesome.io/">Font Awesome</a> is used for icons.</p>
-  <p><a href="http://getbootstrap.com/">Bootstrap</a> is used as the base for the menus.</p>
-  <p><a href="http://noelboss.github.io/featherlight/">Featherlight.js</a> is used for the lightbox on project pages.</p>
+  <h3 class="about-header">Site Credits</h3>
+  <a href="/about/site">Here</a>
+  
 
 </div>
