--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,6 +69,11 @@ i.splash-icon:hover {
   text-shadow: 0px 0px 10px black;
 }
 
+div#page-wrapper {
+  max-width: 800px;
+  margin: auto;
+}
+
 div#navigation {
   font-family: 'Josefin Sans', sans-serif;
   color: white;
@@ -106,7 +111,7 @@ h2#page-title {
   font-size: 2em;
   border-bottom: solid black 2px;
   letter-spacing: .15em;
-  padding-left: 0;
+  padding: 0px;
 }
 
 h2#page-title a {
@@ -257,4 +262,9 @@ input.search-box {
   font-size: 1.5em;
   padding: 0.5em;
   margin-bottom: 1em;
+}
+
+div#top-line {
+  border-top: solid black 1px;
+  padding-top: 1em;
 }
