Remove verbose descriptions of skills/interests from about page

--- a/app/views/about/index.erb
+++ b/app/views/about/index.erb
@@ -28,42 +28,42 @@
   <div class="col-2">
     <p class="mini-header">PROGRAMMING:</p>
     <p>
-      <span class="pas-bold">Ruby:</span> Ruby is the language which I am most proficient in. (somehow word in Rails and Sinatra into this???)
+      <span class="pas-bold">Ruby:</span> Rails & Sinatra
     </p>
     <p>
       <span class="pas-bold">HTML5 & CSS3</span>
     </p>
     <p>
-      <span class="pas-bold">JavaScript:</span> and many of its frameworks including jQuery/Ajax and Angular
+      <span class="pas-bold">JavaScript:</span> jQuery/Ajax and Angular
     </p>
     <p>
-      <span class="pas-bold">Databases:</span> Confident using SQL (posgreSQL, SQLite, mySQL, ActiveRecord for Ruby and SQLAlchemy for Python) I've been a fan of databases since my stint as an intern at the Art Institute of Chicago's archives in 2012 where I prepped items for entry as well as utilized the AIC's databases for research purposes.
+      <span class="pas-bold">Databases:</span> SQL(posgreSQL, SQLite, ActiveRecord, SQLAlchemy)
     </p> 
     <p>
-      <span class="pas-bold">Python:</span> Learned during my capstone project at DBC (<a href="/projects/1">CuriousCorpus</a>) I am familiar with its SciKit-Learn and NLP libraries as well as the Flask Framework and the ORM SQLAlchemy.
+      <span class="pas-bold">Python:</span> Flask, SciKit-Learn
     </p>
     <p>
       <span class="pas-bold">Object Oriented Design</span>
     </p> 
     <p>
-      <span class="pas-bold">Test Driven Development</span>
+      <span class="pas-bold">Test Driven Development:</span> RSpec, Jasmine
     </p>
 
     <p class="mini-header">SOFTWARE:</p>
     <p>
-      <span class="pas-bold">Photoshop:</span> Particularly for graphic creation and in the use of drawing/painting.
+      <span class="pas-bold">Photoshop:</span> CS6
     </p>
     <p>
-      <span class="pas-bold">Sketchup:</span> Versions 8, 2016, and 2017. 
+      <span class="pas-bold">Sketchup:</span> 8, 2016, and 2017. 
     </p>
     <p>
-      <span class="pas-bold">Adobe Acrobat:</span> Particularly for running word recognition on scanned-in ephemera for the creation of searchable text.
+      <span class="pas-bold">Adobe Acrobat:</span> for running word recognition and pagination
     </p>
     <p>
       <span class="pas-bold">MailChimp</span>
     </p>
     <p>
-      <span class="pas-bold">QuickBooks</span>
+      <span class="pas-bold">QuickBooks:</span> expenses and payroll
     </p>
     <p>
       <span class="pas-bold">Basecamp</span>
